--- a/data-science.html
+++ b/data-science.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://momentumsolar.applytojob.com/apply/COadznNDIQ/Data-Scientist'>Data Scientist - Momentum Solar - Career Page</a></h5> 
+<h5><a href='http://momentumsolar.applytojob.com/apply/COadznNDIQ/Data-Scientist'>Data Scientist - Momentum Solar - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/IpXAHNqOgK/Sr-Enterprise-Account-Exec-Data-Science-ML-Mid-Atlantic-MA-DC-VA-PA'>Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page</a></h5> 
+<h5><a href='http://h2oai.applytojob.com/apply/IpXAHNqOgK/Sr-Enterprise-Account-Exec-Data-Science-ML-Mid-Atlantic-MA-DC-VA-PA'>Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -117,7 +117,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/jobs/1085733'>Data Scientist - Apply online - Datatonic - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/jobs/1085733'>Data Scientist - Apply online - Datatonic - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Curiosity about new developments in ML and deep learning; Excellent 
 knowledge of numerical optimisation techniques and ML algorithms. Bonus 
@@ -143,12 +143,12 @@ systems, and text analytics, and a good understanding of deep learning. 5 years
 <p>3 days ago ... Data Scientist - [Remote] - [United States]. Remote Full-time Allows remote. Crisp 
 is a remote-only company and we give our employees the opportunity to solve?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisp.recruiterbox.com/jobs/fk03hx7/'>Data Scientist - [Remote] - [United States] at Crisp Inc.</a></h5> 
+<h5><a href='https://crisp.recruiterbox.com/jobs/fk03hx7/'>Data Scientist - [Remote] - [United States] at Crisp Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Data Scientist - [Remote] - [United States]. Remote Full-time Allows remote. Crisp 
 is a remote-only company and we give our employees the opportunity to solve?...</p>
 <hr/>
-<h5><a href='https://iadbcareers.referrals.selectminds.com/jobs/data-scientist-python-and-r-programmer-consultant-1492'>Data Scientist/ Python and R Programmer Consultant - Inter ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iadbcareers.referrals.selectminds.com/jobs/data-scientist-python-and-r-programmer-consultant-1492'>Data Scientist/ Python and R Programmer Consultant - Inter ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Data Scientist/ Python and R Programmer Consultant Background: The Inter-
 American Development Bank's Knowledge, Innovation and Communication 
@@ -167,7 +167,7 @@ Sector.</p>
 <p>Jul 15, 2019 ... Master's Degree in Data Sciences, Applied Mathematics, Machine Learning or 
 related; 3 to 5 years of experience in Data Sciences, ideally in a tech company?...</p>
 <hr/>
-<h5><a href='https://hummingbird-technologies-ltd.workable.com/j/0AB9D25DD9?viewed=true'>Lead Data Scientist - Apply ... - Hummingbird Technologies Ltd - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hummingbird-technologies-ltd.workable.com/j/0AB9D25DD9?viewed=true'>Lead Data Scientist - Apply ... - Hummingbird Technologies Ltd - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... We use the most advanced machine learning and computer vision techniques, 
 delivering actionable insights on crop health directly to the field meaning farmers
@@ -185,7 +185,7 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -409,7 +409,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medlanes.join.com/jobs/253116-jr-data-scientist-at-digital-health-startup'>Job @ Medlanes (Berlin): Jr. Data Scientist at Dig... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/253116-jr-data-scientist-at-digital-health-startup'>Job @ Medlanes (Berlin): Jr. Data Scientist at Dig... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -466,7 +466,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nulogy/jobs/4367729002'>Job Application for Data Scientist at Nulogy</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nulogy/jobs/4367729002'>Job Application for Data Scientist at Nulogy</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
