--- a/data-engineer.html
+++ b/data-engineer.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">Mendrisio, Ticino, Switzerland Italy Milan</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4369946002'>Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4369946002'>Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -83,6 +83,11 @@
 <h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092444-data-engineer-remote-option-'>Lingoda Data Engineer (Remote option) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/jobs/sr-data-engineer-25224'>Sr Data Engineer - RELX Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... And LexisNexis has over 2PB of the best legal training data in the world! We are 
+looking for an experienced data engineer who is devoted to...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/babylonhealth/4357f052-c2f4-4e29-a13c-e91aa74fdc60'>Babylon Health - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">UK - London</span></p>
@@ -153,11 +158,11 @@ analytic,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/e0393eaa-b5b7-4e08-961f-348633c9ddf5'>Credit Karma - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/creditkarma/e0393eaa-b5b7-4e08-961f-348633c9ddf5'>Credit Karma - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-jax.icims.com/jobs/26992/data-engineer/job'>Data Engineer in Farmington, Connecticut | Careers at FACT ...</a></h5> 
+<h5><a href='https://careers-jax.icims.com/jobs/26992/data-engineer/job'>Data Engineer in Farmington, Connecticut | Careers at FACT ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... FACT - Farmington, Connecticut is now hiring a Data Engineer in Farmington, 
 Connecticut. Review all of the job details and apply today!</p>
@@ -328,11 +333,11 @@ this job. In Xfers, you'll likely get experience on many different projects acro
 with the role for which you're applying??. Please tell us why you selected such a
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Crossmedia/743999692213329-data-engineer'>Crossmedia Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Crossmedia/743999692213329-data-engineer'>Crossmedia Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY Los Angeles New York Hamburg Berlin London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214733-sr-data-engineer-for-leading-sportswear-brand-w2-only-no-c2c-'>Aroghia Group Sr. Data Engineer for Leading Sportswear Brand (W2 Only, no C2C!) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214733-sr-data-engineer-for-leading-sportswear-brand-w2-only-no-c2c-'>Aroghia Group Sr. Data Engineer for Leading Sportswear Brand (W2 Only, no C2C!) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hillsboro, OR, USA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -409,7 +414,7 @@ the job details and apply today!</p>
 <p>Jul 10, 2019 ... 0839 095 Y478 0000|Technology Division|Core Engineering|Data Intelligence|
 Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai Maharashtra, India</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -417,7 +422,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-data-engineer-12973'>Senior Data Engineer - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-data-engineer-12973'>Senior Data Engineer - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... You'll be using modern, scalable technologies to support the expansion of 
 machine learning and be part of transforming the way that we understand and 
@@ -471,10 +476,6 @@ The hire will be responsible for expanding and optimizing our Operations data?..
     Senior Data Engineer at Bizongo
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru Bangalore</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034502-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
