--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,11 +71,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/payfit/a324c2b0-4b10-4eb3-9ec6-fa09c5c52785'>PayFit - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/payfit/a324c2b0-4b10-4eb3-9ec6-fa09c5c52785'>PayFit - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://teeturtle.recruitee.com/o/data-analyst-operations'>
+<h5><a href='https://teeturtle.recruitee.com/o/data-analyst-operations'>
       Data Analyst: Operations - TeeTurtle
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -193,7 +193,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/USToYytts1/Data-Analyst-I'>Data Analyst  I - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/USToYytts1/Data-Analyst-I'>Data Analyst  I - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,11 +222,11 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/obeyafwR'>Valley Health Careers - Clinical Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/valleyhealth/job/obeyafwR'>Valley Health Careers - Clinical Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -234,7 +234,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -301,7 +301,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -333,12 +333,12 @@ Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Acquistion Data Analyst at BDSwiss.</p>
 <hr/>
-<h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Governance Business Analyst at Eurobank 
 Ergasias SA.</p>
 <hr/>
-<h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Data Analyst at Softheon.</p>
 <hr/>
@@ -401,7 +401,7 @@ time?...</p>
 <p>3 days ago ... Essential Functions: Provide expertise and guidance to the Clinical Development 
 team regarding statistical methods for data analysis of clinical trials. Provide?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/veristat/job/oH7Bafwj'>Veristat Careers - Manager of Statistical Programming</a></h5> 
+<h5><a href='https://jobs.jobvite.com/veristat/job/oH7Bafwj'>Veristat Careers - Manager of Statistical Programming</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Provide input into Case Report Form (CRF) and Data Validation Specifications (
 DVS) development in all therapeutic areas; writing specifications for analysis?...</p>
@@ -462,7 +462,7 @@ American?...</p>
 <p>12. Juli 2019 ... Oceans Apart has a job opening for Data Analyst (german-speaking) (m/w/d) in 
 Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/database-analyst-ii-13048'>Database Analyst II - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/database-analyst-ii-13048'>Database Analyst II - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
